--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
-/* styles.css */
-
-/* Add styles here to customize the appearance of your app */
+*
+{
+    margin: 0;
+    padding: 0;
+}
+section
+{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: #111;
+}
