--- a/src/boardScreen/styles.css
+++ b/src/boardScreen/styles.css
@@ -81,7 +81,8 @@ tr:nth-child(odd) td:nth-child(even), tr:nth-child(even) td:nth-child(odd) {
 	width: 15%;
 	background: #CAEEF5;
 	padding: 10px;
-	margin: 7%;
+	margin-left: 5%;
+	margin-right: 5%;
 	border: 2px solid;
 	border-radius: 10px;
 }
@@ -99,9 +100,32 @@ button {
 	border: 2px solid;
 }
 
+/*Jason Added*/
 button:hover {
 	background: black;
 	border: 2px solid #9DECF9;
 	color: #9DECF9;
 }
 
+#onLoad
+{
+	position: absolute;
+	top: 25%;
+	left: 25%;
+	scale: 300;
+	animation: onLoadTransition ease-out 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes onLoadTransition
+{
+	0%{
+        scale: 300;
+    }
+    50% {
+        scale: 10;
+	}
+	100%{
+		scale: 0;
+	}
+}
