--- a/src/startScreen/start.css
+++ b/src/startScreen/start.css
@@ -2,7 +2,7 @@
 {
     margin: 0;
     padding: 0;
-    animation: fadein 3s;
+    animation: fadein 5s;
 }
 
 section
@@ -21,7 +21,7 @@ section
 section .row
 {
     position: relative;
-    top: -30%;
+    top: -40%;
     left: -10%;
     width: 100%;
     padding: 10px 0;
@@ -65,8 +65,8 @@ section .row
 
 .piecies
 {   
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     transition: 1s;
     filter: brightness(0) invert(.9);
     padding: 6px 3px;
@@ -82,9 +82,9 @@ section .row
 
 section .row div
 {
-    animation:  animate 23s linear infinite;
+    animation:  animate 16s linear infinite;
     animation-iteration-count: infinite;
-    animation-delay: -23s;
+    animation-delay: -16s;
     -webkit-user-drag: none;
     user-select: none;
     -moz-user-select: none;
@@ -131,13 +131,15 @@ section .row div
     animation-fill-mode: forwards;
 }
 
-.profImg
-{
-    opacity: 0;
+#profilePicture{
     width:130px;
     height:130px;
     object-fit:cover;
     border-radius:50%;
+}
+
+.profImg
+{
     animation:  fadein .2s, profileEnlarge .5s;
     animation-delay: 2s, 3.5s;
     animation-fill-mode: forwards;
@@ -193,6 +195,42 @@ section .row div
     animation-fill-mode: forwards;
 }
 
+.topIntroAnimation
+{
+    position: fixed;
+    background-color: #91e8e8;
+    top: 0;
+    left: -75vw;
+    height: 33%;
+    width: 100%;
+    animation: introSlide 0.3s ease-in-out forwards;
+    z-index: 100;
+}
+.middleIntroAnimation
+{
+    position: fixed;
+    background-color: #91e8e8;
+    top: 33%;
+    left: -75vw;
+    height: 33%;
+    width: 100%;
+    animation: introSlide 0.3s ease-in-out forwards;
+    animation-delay: 0.3s;
+    z-index: 100;
+}
+.bottomIntroAnimation
+{
+    position: fixed;
+    background-color: #91e8e8;
+    top: 66%;
+    left: -75vw;
+    height: 34%;
+    width: 100%;
+    animation: introSlide 0.3s ease-in-out forwards;
+    animation-delay: 0.6s;
+    z-index: 100;
+}
+/*
 .loginButton
 {
     opacity: 0;
@@ -208,6 +246,7 @@ section .row div
     animation-delay: 9s;
     animation-fill-mode: forwards;
 }
+*/
 
 .userCreationButtonAnimation
 {
@@ -249,7 +288,6 @@ section .row div
 
 .accountCreationButton
 {
-    opacity: 0;
     position: absolute;
     bottom: 1%;
     left: 50%;
@@ -381,7 +419,7 @@ span{
     }
     100%
     {
-        transform: translateX(-50%);
+        transform: translateX(-15%);
     }
 }
 
@@ -487,5 +525,14 @@ span{
     100%
     {
         width: 800px;;
+    }
+}
+
+@keyframes introSlide {
+    from {
+        left: -75vw;
+    }
+    to {
+        left: 0;
     }
 }
