add cookie and personalize player pages

--- a/views/admin.html
+++ b/views/admin.html
@@ -9,6 +9,8 @@
         <button type="submit">Enter Player</button>
     </form>
 
+    <p>{{ err.message }}</p>
+
     <ul>
         {% for player in players %}
         <li>
