login adds or creates user with no error handling, to test rest of app

--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -129,7 +129,8 @@
 
       <div id="currentGames" style="background-color: #bbb;">
         <br>
-        <h1>{{ player.player_name }} Current Games:</h1>
+        <h1>{{ player.player_name }}</h1>
+        <h2>Current Games:</h2>
         <div id="matches"> <p> Example </p> </div>
         <div id="matches"> <p> Example </p> </div>
         <div id="matches"> <p> Example </p> </div>
