--- a/views/start/start.html
+++ b/views/start/start.html
@@ -126,13 +126,17 @@
       <div id="profile">
         <img id="profilePicture" src="/views/images/userPfp.jpg"/>
         <br><br>
-        <input type="text" id="username" placeholder="Username" autocomplete="off">
-        <!--<label class="profileInput">Username</label>-->
-        <!-- Online login button found -->
-        <br><br>
-        <label id="noUserFound"> - No User Found - </label>
-        <br><br>
-        <div id="login"><span><a href="#"></a></span></div>
+        <form action="/players" method="POST">
+          <input type="text" id="player_name" name="player_name" placeholder="Username" autocomplete="off">
+          <!--<label class="profileInput">Username</label>-->
+          <!-- Online login button found -->
+          <br><br>
+          <label id="noUserFound"> - No User Found - </label>
+          <br><br>
+          <div id="login"><span><input type="submit"></span></div>
+        </form>
+        
+        
       </div>
 
       <!-- Custom fade animation circle, didnt work, so collapse from sides -->
