add player stats to dashboard

--- a/views/board/board.html
+++ b/views/board/board.html
@@ -29,7 +29,7 @@
     <div id="container">
     
         <div id="pieces">
-        	<h2>Pieces Captured by User</h2>
+        	<h2>Pieces Captured by {{ player.player_name }}</h2>
 
     	</div>
     
@@ -160,7 +160,7 @@
     </table>
     
     <div id="pieces">
-    <h2>Pieces Captured by AI</h2>
+    <h2>Pieces Captured by {{ opponent.player_name }}</h2>
 
     </div>
     
