--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -145,11 +145,11 @@
         <br><br><br><br><br>
         <h1>Wins</h1>
         <br>
-        <label id="wins">###</label>
+        <label id="wins">{{ player_stats.wins }}</label>
         <br><br>
         <h1>Loses</h1>
         <br>
-        <label id="loses">###</label>
+        <label id="loses">{{ player_stats.losses }}</label>
       </div>
       
       <div id="newGameButton">
