update db schema, isturn variable and playsin unique constraint causing problems

--- a/views/board/board.html
+++ b/views/board/board.html
@@ -24,7 +24,7 @@
   	</div>
 
 	
-    <center><h1>{{ player.player_name }} vs {{ opponent.player_name }}</h1>
+    <center><h1>{{ board.board_id }}) {{ player.player_name }} vs {{ opponent.player_name }}</h1>
     
     <div id="container">
     
