--- a/views/start/start.html
+++ b/views/start/start.html
@@ -8,7 +8,7 @@
     <link href="/views/start/start.css" rel="stylesheet">
     <title>BetterChess</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Convergence&family=Lato:wght@300;400;700;900&family=Mukta:wght@300;400;600;700;800&family=Noto+Sans:wght@400;700&display=swap" rel="styleshee">
+    <link href="https://fonts.googleapis.com/css2?family=Convergence&family=Lato:wght@300;400;700;900&family=Mukta:wght@300;400;600;700;800&family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <section>
@@ -127,7 +127,7 @@
         <img id="profilePicture" src="/views/images/userPfp.jpg"/>
         <br><br>
         <form action="/players" method="POST">
-          <input type="text" id="player_name" name="player_name" placeholder="Username" autocomplete="off">
+          <input type="text" id="player_name" name="player_name" placeholder="Enter Your Name to Play" autocomplete="off">
           <!--<label class="profileInput">Username</label>-->
           <!-- Online login button found -->
           <br><br>
