removed create user
feature commented out, could be implemented later if wanted to

--- a/views/board/board.css
+++ b/views/board/board.css
@@ -38,7 +38,6 @@ a:hover {
   	position: relative;
   	top: -10px;
   	border-bottom:2px solid;
-	  float: left;
 }
 
 #container {
@@ -50,12 +49,13 @@ table {
   	border: 2px solid;
   	background: #9DECF9;
   	padding: 5px;
+	  scale: .8;
 }
 
 table {
 	width: 600px;
 	height: 600px;
-	margin: auto;
+	/*margin: auto;*/
 }
 
 th {
