Updated Board UI
Board touched up, removed more unecessary components, added title.

--- a/views/board/board.html
+++ b/views/board/board.html
@@ -14,11 +14,111 @@
 		<img src="/views/images/pawnDesignDash1.png" alt="onLoadImageTransition">
 	</div>
 	-->
+	<section>
+		{% for i in range(0,20) %}
+		<div class="row">
+		  <div>
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/knight.png" alt="knight"class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+		  </div>       
+		  <div>
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+			<img src="/views/images/pawn.png" alt="pawn" class="piecies">
+			<img src="/views/images/knight.png" alt="knight" class="piecies">
+			<img src="/views/images/bishop.png" alt="bishop" class="piecies">
+			<img src="/views/images/rook.png" alt="rook" class="piecies">
+			<img src="/views/images/queen.png" alt="queen" class="piecies">
+		  </div>
+		</div>
+		{% endfor %}
 
   	<div id="header">
 		<form action="/dashboard" method="GET">
-			<input type="submit" value="Dashboard">
+			<input id="dashBack" type="submit" value="Dashboard">
 		</form>
+		<h2 id="matchTitle">{{ board[0].board_status }}) {{ player.player_name }} vs {{ opponent.player_name }}</h2>
 		<!-- Can be added in future.
 			<a href="/">Leaderboard</a>
 	  		<a href="/">History</a>
@@ -29,7 +129,7 @@
   	</div>
 
 	
-    <center><h1>{{ board[0].board_status }}) {{ player.player_name }} vs {{ opponent.player_name }}</h1>
+    <!--<center><h1 id="matchTitle">{{ board[0].board_status }}) {{ player.player_name }} vs {{ opponent.player_name }}</h1></center>-->
     
 	<!-- REMOVED:: Could be added in future.
     <div id="container">
@@ -41,8 +141,8 @@
     
     
     <!---board start--->
-    
-    <table id="board" data-boardid="{{ board[0].board_id }}" data-playerid="{{ player.player_id }}" data-opponentid="{{ opponent.player_id }}" data-isturn="{{ isturn }}" data-boardstatus="{{ board[0].board_status }}">
+    <div id="boardBack">
+    	<table id="board" data-boardid="{{ board[0].board_id }}" data-playerid="{{ player.player_id }}" data-opponentid="{{ opponent.player_id }}" data-isturn="{{ isturn }}" data-boardstatus="{{ board[0].board_status }}">
     	<tr>
     		<th></th>
     		<th>A</th>
@@ -419,7 +519,8 @@
     		<th>H</th>
     		<th></th>
    		</tr>
-    </table>
+    	</table>
+	</div>
     
     <!--<div id="pieces"> REMOVED:: Could be added in future
     	<h2>Pieces Captured by {{ opponent.player_name }}</h2>
@@ -430,7 +531,7 @@
     <!--  Currently dont see the need for this at the moment.
 		<center><button id="submit">Lock in Move</button></center>
 	-->
-
+</section>
 	{% endblock %}
 
 	<!-- You can also require other files to run in this process -->
