--- a/views/board/board.css
+++ b/views/board/board.css
@@ -1,10 +1,82 @@
 /* styles.css */
-body {
+
+*
+{
+    margin: 0;
+    padding: 0;
+	font-family: Arial;
+}
+
+section
+{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: #89CFF0;
+    
+    flex-direction: column;
+    overflow: hidden;
+    white-space: nowrap;
+
+}
+
+section .row
+{
+    position: relative;
+    top: -40%;
+    left: -10%;
+    width: 100%;
+    padding: 10px 0;
+    transform: rotate(-30deg);
+    white-space: nowrap;
+}
+
+.piecies
+{   
+    width: 40px;
+    height: 40px;
+    transition: 1s;
+    filter: brightness(0) invert(.9);
+    padding: 6px 3px;
+    user-select: none;
+    cursor: default;
+}
+
+.piecies:hover
+{
+    transition:  0s;
+    filter: brightness(0) invert(1);
+}
+
+section .row div
+{
+    animation:  animate 16s linear infinite;
+    animation-iteration-count: infinite;
+    animation-delay: -16s;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+@keyframes animate {
+    0%
+    {
+        transform: translateX(0%);
+    }
+    100%
+    {
+        transform: translateX(-15%);
+    }
+}
+/*body {
 	width: 100%;
 	font-family: Arial;
-	/* pointer-events: none; */
+	pointer-events: none; 
 	background: linear-gradient(#B0A7A2, #CAEEF5);
-}
+	
+}*/
 
 img[src="/views/board/piece_images/.png"] {
 	display: none;
@@ -31,25 +103,51 @@ a:hover {
 }
 
 #header {
+	padding-top: 30px;
 	width: 100%;
 	height: 50px;
 	font-size: 20px;
   	text-align: center;
-  	position: relative;
-  	top: -10px;
-  	border-bottom:2px solid;
+  	position: absolute;
+	top: 3%;
+    left: 50%;
+    transform: translateX(-50%);
+	z-index: 1000;
+}
+
+#boardBack{
+	position: absolute;
+	top: 50%;
+    left: 50%;
+    transform: translate(-50%, -45%);
+}
+
+#dashBack{
+	height: 50px;
+	width: 100px;
+	background-color: white;
+	border-radius: 25px;
+}
+
+#matchTitle{
+	position: absolute;
+	top: 110%;
+    left: 50%;
+    transform: translateX(-50%);
+	z-index: 1000;
 }
 
 #container {
   	display: flex;
   	flex-wrap: nowrap;
 }
-
 table {
   	border: 2px solid;
-  	background: #9DECF9;
-  	padding: 5px;
-	  scale: .8;
+  	background: burlywood;
+  	padding: 20px;
+	padding-top: 20px;
+	scale: .75;
+	border-radius: 25px;
 }
 
 table {
