--- a/views/board/board.html
+++ b/views/board/board.html
@@ -128,7 +128,13 @@
 		-->
   	</div>
 
-	
+	<div>
+        <img id="logoIcon" src="/views/images/chess.png" alt="LogoImage">
+    </div>
+
+    <div>
+    	<img id="logoImg" src="/views/images/chessLogo.png" height="34" width="78.5" alt="ChessTitle">
+    </div>
     <!--<center><h1 id="matchTitle">{{ board[0].board_status }}) {{ player.player_name }} vs {{ opponent.player_name }}</h1></center>-->
     
 	<!-- REMOVED:: Could be added in future.
