--- a/views/start/start.html
+++ b/views/start/start.html
@@ -133,7 +133,7 @@
           <br><br>
           <label id="noUserFound"> - No User Found - </label>
           <br><br>
-          <div id="login"><span><input type="submit"></span></div>
+          <div id="login"><span><input id="loginButton" type="submit"></span></div>
         </form>
         
         
